Files included, and formatting
included characters.cs and province.cs to the Feudal.csproj. Also did
some formatting on the comments so they weren’t running so long.

--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -112,6 +112,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="CS Files\Character.cs" />
+    <Compile Include="CS Files\Province.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes.txt" />
