Religion.cs, and misc fixes
Created the Religion.cs file. Also made misc fixes in the other files.
Mostly cleaning up formatting, and fixing an array declaration.

--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -114,6 +114,7 @@
     </Compile>
     <Compile Include="CS Files\Character.cs" />
     <Compile Include="CS Files\Province.cs" />
+    <Compile Include="CS Files\Religion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes.txt" />
