Religions and Characters
Created a deep copy constructor for the Religion class, and an idea for
implementing religions. Characters now have a religion assigned to them.

--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -115,6 +115,7 @@
     <Compile Include="CS Files\Character.cs" />
     <Compile Include="CS Files\Province.cs" />
     <Compile Include="CS Files\Religion.cs" />
+    <Compile Include="CS Files\Religions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes.txt" />
