--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -115,7 +115,7 @@
     <Compile Include="CS Files\Character.cs" />
     <Compile Include="CS Files\Province.cs" />
     <Compile Include="CS Files\Religion.cs" />
-    <Compile Include="CS Files\ReligionTypes.cs" />
+    <Compile Include="CS Files\Belief.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes.txt" />
