--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -81,6 +81,12 @@
       <DependentUpon>feudalMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CS Files\Program.cs" />
+    <Compile Include="Forms\Map.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Map.Designer.cs">
+      <DependentUpon>Map.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CS Files\Turns.cs" />
     <EmbeddedResource Include="Forms\aboutPage.resx">
@@ -91,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="feudalMainForm.resx">
       <DependentUpon>feudalMainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Map.resx">
+      <DependentUpon>Map.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
