--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CS Files\economy.cs" />
+    <Compile Include="CS Files\Economy.cs" />
     <Compile Include="Forms\aboutPage.cs">
       <SubType>Form</SubType>
     </Compile>
