added the Maps class
The map class has accessors/modifiers for the provinces array to use
rather than directly interfaceing with the array.

--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CS Files\Economy.cs" />
+    <Compile Include="CS Files\Maps.cs" />
     <Compile Include="Forms\aboutPage.cs">
       <SubType>Form</SubType>
     </Compile>
