A lot of updates to make the AI function
There's a fairly serious error that got introduced though, where the
form doesn't load up. I'm making this commit to get back into the master
to see that it loads up as well.

--- a/Feudal/Feudal.csproj
+++ b/Feudal/Feudal.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CS Files\AI.cs" />
     <Compile Include="CS Files\Economy.cs" />
     <Compile Include="CS Files\Maps.cs" />
     <Compile Include="Forms\aboutPage.cs">
