--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 
 .idea/workspace.xml
+
+out/production/Mechwarrior_CharGen/Character.class
+
+out/production/Mechwarrior_CharGen/Skill.class
+
+out/production/Mechwarrior_CharGen/Trait.class
+
+out/production/Mechwarrior_CharGen/Attribute.class
+
+out/production/Mechwarrior_CharGen/Main.class
+
+out/production/Mechwarrior_CharGen/SkillComparator.class
+
+out/production/Mechwarrior_CharGen/TraitComparator.class
